--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=system
 
 spring.datasource.url = jdbc:mysql://localhost:3306/gringots_bk 
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=Cac8710Pg2136@
 
 # Disable Hibernate auto configuration
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
